--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,8 +1,9 @@
 # Requirements building
 swig==4.3.0
 cmake==3.31.1
-setuptools==67.5.0; python_version<"3.9"
-setuptools==75.3.0; python_version>="3.9"
+#setuptools==67.5.0; python_version<"3.9"
+#setuptools==75.3.0; python_version>="3.9"
+setuptools==75.3.0
 wheel==0.41.3
 
 # Requirements for running tests
