--- a/.github/workflows/ci_build_wheels.yml
+++ b/.github/workflows/ci_build_wheels.yml
@@ -22,68 +22,41 @@ jobs:
           - os: ubuntu-20.04
             system_type: ["manylinux", "_2_34"]
             arch: x86_64
-            py_minors: 8,12
-          #- os: ubuntu-20.04
-          #  system_type: ["manylinux", "_2_28"]
-          #  arch: x86_64
-          #  py_minors: 8,12
-          #- os: ubuntu-20.04
-          #  system_type: ["manylinux", "2014"]
-          #  arch: x86_64
-          #  py_minors: 8,12
-          #- os: ubuntu-20.04
-          #  system_type: ["manylinux", "2010"]
-          #  arch: x86_64
-          #  py_minors: 8,9
+            py_minors: 8,13
 
           # 64-bit musllinux
           - os: ubuntu-20.04
             system_type: ["musllinux", "_1_2"]
             arch: x86_64
-            py_minors: 8,11
-          # Python 3.12 fails since cibuildwheel still depends on distutils
-          # for musllinux
-          #- os: ubuntu-20.04
-          #  system_type: ["musllinux", "_1_1"]
-          #  arch: x86_64
-          #  py_minors: 8,11
+            py_minors: 8,13
 
           # 32-bit manylinux
+          # Python 3.8 does not have numpy2
           - os: ubuntu-20.04
             system_type: ["manylinux", "2014"]
             arch: i686
-            py_minors: 10,12
-          # Python 3.12 fails since cibuildwheel still depends on distutils
-          # for musllinux
-          #- os: ubuntu-20.04
-          #  system_type: ["manylinux", "2010"]
-          #  arch: i686
-          #  py_minors: 8,9
+            py_minors: 10,13
 
           # 32-bit musllinux
+          # Python 3.8 does not have numpy2
+          # Python 3.12 fails since cibuildwheel still depends on distutils
           - os: ubuntu-20.04
             system_type: ["musllinux", "_1_2"]
             arch: i686
-            py_minors: 8,11
-          # Python 3.12 fails since cibuildwheel still depends on distutils
-          # for musllinux
-          #- os: ubuntu-20.04
-          #  system_type: ["musllinux", "_1_1"]
-          #  arch: i686
-          #  py_minors: 8,11
+            py_minors: 9,11
 
           # 64-bit Windows
           - os: windows-2019
             system_type: ["win", ""]
             arch: amd64
-            py_minors: 8,12
+            py_minors: 8,13
 
           # 32-bit Windows
           # See issue #220: https://github.com/SINTEF/dlite/issues/220
           # - os: windows-2019
           #   system_type: ["win32", ""]
           #   arch: ""
-          #   py_minors: 7,10
+          #   py_minors: 8,13
 
           # 64-bit (Intel) macOS
           # See issue #221: https://github.com/SINTEF/dlite/issues/221
